{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 54,
  "lineage": "ea12be8d-5edb-213b-3568-3e19fbd0babc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:vpc/vpc-004e37d5b6359d560",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4d92eafbb5944fc",
            "default_route_table_id": "rtb-063cda40960746246",
            "default_security_group_id": "sg-0f50619bb4e4f358c",
            "dhcp_options_id": "dopt-01485e86c420b5404",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004e37d5b6359d560",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063cda40960746246",
            "owner_id": "737457451118",
            "tags": {
              "Name": "wordpress-app-vpc",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-vpc",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpres_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:loadbalancer/app/wordppres-lb/86f0a6da3ec2e211",
            "arn_suffix": "app/wordppres-lb/86f0a6da3ec2e211",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordppres-lb-1948540389.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:737457451118:loadbalancer/app/wordppres-lb/86f0a6da3ec2e211",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordppres-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-029826e6707a5665f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b92f5b7e11885f4"
              },
              {
                "subnet_id": "subnet-0e65e5699729e168d"
              }
            ],
            "subnets": [
              "subnet-08b92f5b7e11885f4",
              "subnet-0e65e5699729e168d"
            ],
            "tags": {
              "Name": "wordpress-app-lb",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-lb",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.sg.aws_security_group.wordpressApp_alb_sg",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1b"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:listener/app/wordppres-lb/86f0a6da3ec2e211/159e1e3357e99887",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:737457451118:listener/app/wordppres-lb/86f0a6da3ec2e211/159e1e3357e99887",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:loadbalancer/app/wordppres-lb/86f0a6da3ec2e211",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "wordpress-app-lb_listener",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-lb_listener",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.alb.aws_lb.wordpres_lb",
            "module.alb.aws_lb_target_group.lb_target_group",
            "module.sg.aws_security_group.wordpressApp_alb_sg",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1b"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:listener/app/wordppres-lb/86f0a6da3ec2e211/eb77ca8da32623bb",
            "certificate_arn": "arn:aws:acm:us-east-1:737457451118:certificate/37d1c86b-1336-42b8-bfd3-6664064f2e24",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:targetgroup/wordpress-app-target-group/56d23b2c790ce931",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:737457451118:listener/app/wordppres-lb/86f0a6da3ec2e211/eb77ca8da32623bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:loadbalancer/app/wordppres-lb/86f0a6da3ec2e211",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Name": "wordpress-app-lb_listeber-https",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-lb_listeber-https",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.alb.aws_lb.wordpres_lb",
            "module.alb.aws_lb_target_group.lb_target_group",
            "module.cert_module.module.acm_certificate.aws_acm_certificate.this",
            "module.cert_module.module.acm_certificate.aws_acm_certificate_validation.this",
            "module.cert_module.module.acm_certificate.aws_route53_record.validation",
            "module.route_53.data.aws_route53_zone.wp_route53_zone",
            "module.sg.aws_security_group.wordpressApp_alb_sg",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1b"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:737457451118:targetgroup/wordpress-app-target-group/56d23b2c790ce931",
            "arn_suffix": "targetgroup/wordpress-app-target-group/56d23b2c790ce931",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 25,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:737457451118:targetgroup/wordpress-app-target-group/56d23b2c790ce931",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:737457451118:loadbalancer/app/wordppres-lb/86f0a6da3ec2e211"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wordpress-app-target_group",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-target_group",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020ce7b4a10644f12",
            "arn": "arn:aws:ec2:us-east-1:737457451118:instance/i-049d3cd70f07aa8cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049d3cd70f07aa8cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1ad0218d613f496",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.224",
            "public_ip": "44.200.151.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b19ce3ad89bc81f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b92f5b7e11885f4",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024f4787680c892f7"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.aws_instance.aws_key_pair.ssh_key",
            "module.sg.aws_security_group.jump_server_sg",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:security-group/sg-024f4787680c892f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024f4787680c892f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240722120159588200000004",
            "name_prefix": "terraform-",
            "owner_id": "737457451118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-app-jump-server",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-jump-server",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:security-group/sg-0f61bf8b8bf71d4fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f61bf8b8bf71d4fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0483fe0487800896e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-rds-sg",
            "name_prefix": "",
            "owner_id": "737457451118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-app-rds-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-rds-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.sg.aws_security_group.jump_server_sg",
            "module.sg.aws_security_group.wordpressApp_alb_sg",
            "module.sg.aws_security_group.wordpressApp_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpressApp_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:security-group/sg-029826e6707a5665f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029826e6707a5665f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240722120158303700000003",
            "name_prefix": "terraform-",
            "owner_id": "737457451118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-app-alb-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-alb-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpressApp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:security-group/sg-0483fe0487800896e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0483fe0487800896e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024f4787680c892f7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029826e6707a5665f"
                ],
                "self": false,
                "to_port": 61000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029826e6707a5665f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029826e6707a5665f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240722120203572800000007",
            "name_prefix": "terraform-",
            "owner_id": "737457451118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-app-asg-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-asg-sg",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.sg.aws_security_group.jump_server_sg",
            "module.sg.aws_security_group.wordpressApp_alb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09271654109e0cdcc",
            "arn": "arn:aws:ec2:us-east-1:737457451118:elastic-ip/eipalloc-09271654109e0cdcc",
            "association_id": "eipassoc-0e05e528fabe791c9",
            "domain": "vpc",
            "id": "eipalloc-09271654109e0cdcc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a0a6350d0a24a8b5",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-44-195-53-54.compute-1.amazonaws.com",
            "public_ip": "44.195.53.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wordpress-app-eip-1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-eip-1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:internet-gateway/igw-057da74e68cb4233c",
            "id": "igw-057da74e68cb4233c",
            "owner_id": "737457451118",
            "tags": {
              "Name": "wordpress-app-igw",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-igw",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09271654109e0cdcc",
            "association_id": "eipassoc-0e05e528fabe791c9",
            "connectivity_type": "public",
            "id": "nat-09139f8633b7a0e53",
            "network_interface_id": "eni-0a0a6350d0a24a8b5",
            "private_ip": "10.0.1.71",
            "public_ip": "44.195.53.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b92f5b7e11885f4",
            "tags": {
              "Name": "wordpress-app-nat-gateway",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-nat-gateway",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            }
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_eip.nat_eip",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:route-table/rtb-02b553934bfa79235",
            "id": "rtb-02b553934bfa79235",
            "owner_id": "737457451118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09139f8633b7a0e53",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-app-private-route-table",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-private-route-table",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_eip.nat_eip",
            "module.subnet_module.aws_nat_gateway.app_nat_gateway",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:route-table/rtb-04ea3528634a91627",
            "id": "rtb-04ea3528634a91627",
            "owner_id": "737457451118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057da74e68cb4233c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-app-public-route-table",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-public-route-table",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_internet_gateway.app_igw"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1ef9b8420481a8",
            "route_table_id": "rtb-02b553934bfa79235",
            "subnet_id": "subnet-026c33d601c5ba4dc"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_eip.nat_eip",
            "module.subnet_module.aws_nat_gateway.app_nat_gateway",
            "module.subnet_module.aws_route_table.private_route_table",
            "module.subnet_module.aws_subnet.private_subnet_us_east_1a",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79fe6239377603c",
            "route_table_id": "rtb-02b553934bfa79235",
            "subnet_id": "subnet-0932f448536ef1ca9"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_eip.nat_eip",
            "module.subnet_module.aws_nat_gateway.app_nat_gateway",
            "module.subnet_module.aws_route_table.private_route_table",
            "module.subnet_module.aws_subnet.private_subnet_us_east_1b",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f3983313d5f05a",
            "route_table_id": "rtb-04ea3528634a91627",
            "subnet_id": "subnet-08b92f5b7e11885f4"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_internet_gateway.app_igw",
            "module.subnet_module.aws_route_table.public_route_table",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1a"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab7d2c5f1a580b1",
            "route_table_id": "rtb-04ea3528634a91627",
            "subnet_id": "subnet-0e65e5699729e168d"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.subnet_module.aws_internet_gateway.app_igw",
            "module.subnet_module.aws_route_table.public_route_table",
            "module.subnet_module.aws_subnet.public_subnet_us_east_1b"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:subnet/subnet-026c33d601c5ba4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026c33d601c5ba4dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737457451118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-app-private_subnet_us_east_1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-private_subnet_us_east_1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:subnet/subnet-0932f448536ef1ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0932f448536ef1ca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737457451118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-app-private_subnet_us_east_1b",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-private_subnet_us_east_1b",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:subnet/subnet-08b92f5b7e11885f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b92f5b7e11885f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737457451118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-app-public-subnet-us-east-1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-public-subnet-us-east-1a",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737457451118:subnet/subnet-0e65e5699729e168d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e65e5699729e168d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737457451118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-app-public_subnet_us_east_1b",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "tags_all": {
              "Name": "wordpress-app-public_subnet_us_east_1b",
              "app": "wordpress",
              "created-by": "Bushra Fatima",
              "environment": "XLDP-dev",
              "owner": "Bushra Fatima",
              "project": "S217-XLDP",
              "team": "Firebirds"
            },
            "vpc_id": "vpc-004e37d5b6359d560"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    }
  ]
}